<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>app</groupId>
  <artifactId>demo</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>demo</name>

  <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   <maven.compiler.release>25</maven.compiler.release>

   <app.mainClass>app.App</app.mainClass>

   <javafx.version>25.0.1</javafx.version>
   <junit.version>5.12.0</junit.version>
   <atlantafx.version>2.1.0</atlantafx.version>
   <gson.version>2.14.0</gson.version>
   <mysql.version>9.3.0</mysql.version>

   <compiler.plugin.version>3.15.0</compiler.plugin.version>
   <surefire.plugin.version>3.5.2</surefire.plugin.version>
   <javafx.plugin.version>0.0.8</javafx.plugin.version>
   <exec.plugin.version>3.6.3</exec.plugin.version>
   <spotless.plugin.version>3.4.0</spotless.plugin.version>
   <google.java.format.version>1.35.0</google.java.format.version>
  </properties>

  <dependencies>
   <dependency>
  <groupId>org.openjfx</groupId>
  <artifactId>javafx-controls</artifactId>
  <version>${javafx.version}</version>
   </dependency>
   <dependency>
  <groupId>org.openjfx</groupId>
  <artifactId>javafx-fxml</artifactId>
  <version>${javafx.version}</version>
   </dependency>
   <dependency>
  <groupId>io.github.mkpaz</groupId>
  <artifactId>atlantafx-base</artifactId>
  <version>${atlantafx.version}</version>
   </dependency>
   <dependency>
  <groupId>com.google.code.gson</groupId>
  <artifactId>gson</artifactId>
  <version>${gson.version}</version>
   </dependency>
   <dependency>
  <groupId>com.mysql</groupId>
  <artifactId>mysql-connector-j</artifactId>
  <version>${mysql.version}</version>
   </dependency>

   <dependency>
  <groupId>org.junit.jupiter</groupId>
  <artifactId>junit-jupiter-api</artifactId>
  <version>${junit.version}</version>
  <scope>test</scope>
   </dependency>
   <dependency>
  <groupId>org.junit.jupiter</groupId>
  <artifactId>junit-jupiter-engine</artifactId>
  <version>${junit.version}</version>
  <scope>test</scope>
   </dependency>
  </dependencies>

  <build>
   <plugins>
  <plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-compiler-plugin</artifactId>
  <version>${compiler.plugin.version}</version>
  <configuration>
    <release>${maven.compiler.release}</release>
  </configuration>
  </plugin>

  <plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-surefire-plugin</artifactId>
  <version>${surefire.plugin.version}</version>
  </plugin>

  <plugin>
  <groupId>org.openjfx</groupId>
  <artifactId>javafx-maven-plugin</artifactId>
  <version>${javafx.plugin.version}</version>
  <configuration>
    <mainClass>${app.mainClass}</mainClass>
    <launcher>app</launcher>
    <jlinkZipName>app</jlinkZipName>
    <jlinkImageName>app</jlinkImageName>
    <noManPages>true</noManPages>
    <stripDebug>true</stripDebug>
    <noHeaderFiles>true</noHeaderFiles>
  </configuration>
  </plugin>

  <plugin>
  <groupId>org.codehaus.mojo</groupId>
  <artifactId>exec-maven-plugin</artifactId>
  <version>${exec.plugin.version}</version>
  <configuration>
    <mainClass>${app.mainClass}</mainClass>
  </configuration>
  </plugin>

  <plugin>
  <groupId>com.diffplug.spotless</groupId>
  <artifactId>spotless-maven-plugin</artifactId>
  <version>${spotless.plugin.version}</version>
  <configuration>
    <java>
  <googleJavaFormat>
   <version>${google.java.format.version}</version>
   <style>GOOGLE</style>
  </googleJavaFormat>
  <removeUnusedImports/>
  <lineEndings>GIT_ATTRIBUTES</lineEndings>
    </java>
  </configuration>
  <executions>
    <execution>
  <id>spotless-check</id>
  <phase>verify</phase>
  <goals>
   <goal>check</goal>
  </goals>
    </execution>
  </executions>
  </plugin>
   </plugins>
  </build>

  <profiles>
   <profile>
  <id>client</id>
  <activation>
  <activeByDefault>true</activeByDefault>
  </activation>
  <properties>
  <app.mainClass>app.App</app.mainClass>
  </properties>
   </profile>

   <profile>
  <id>server</id>
  <properties>
  <app.mainClass>app.ServerApp</app.mainClass>
  </properties>
   </profile>

   <profile>
  <id>demo</id>
  <properties>
  <app.mainClass>app.DemoRunner</app.mainClass>
  </properties>
   </profile>
  </profiles>
</project>